--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,5 +46,10 @@
     "tailwindcss": "^4.1.13",
     "eslint": "^8.57.0",
     "typescript": "^4.9.5"
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "eslint.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
