chore(deploy): add Render blueprint and deploy guide; feat(cors): allow Vercel previews via CORS_ALLOW_VERCEL_PREVIEWS and centralize checks; docs(env): update .env.example with mail + CORS settings

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -60,3 +60,15 @@ DEBUG_CORS=1
 # CORS_ORIGINS=http://localhost:3000,http://localhost:3001
 # To allow ALL origins (dev only) uncomment below
 # CORS_ALLOW_ALL=1
+
+# Allow *.vercel.app preview domains automatically (set to 0/false for strict prod)
+CORS_ALLOW_VERCEL_PREVIEWS=1
+
+# --- Email (optional; enables OTP/reset and notifications) ---
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_FROM=no-reply@example.com
+MAIL_SERVER=smtp.gmail.com
+MAIL_PORT=587
+MAIL_STARTTLS=true
+MAIL_SSL_TLS=false
