--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,7 +17,8 @@ redis
 pinecone-client>=3.0.0,<4.0.0
 # Use HTTP transport only; avoid gRPC to prevent ALTS warnings outside GCP
 python-dotenv
-httpx>=0.24
+httpx[http2]>=0.24
+orjson>=3.9
 google-generativeai
 # Optional tracing over HTTP (not required unless enabling OTEL export)
 # opentelemetry-exporter-otlp-proto-http
