--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -34,7 +34,8 @@ PyYAML
 prometheus-client
 bleach>=6.1.0
 # Web scraping for real-time search content
-newspaper3k>=0.2.9
+# newspaper3k 0.2.9+ not available; pin to last published compatible release.
+newspaper3k==0.2.8
 beautifulsoup4>=4.12.0
 lxml>=4.9.0
 # Optional: serpapi for real-time web search (alternative to Google Custom Search)
